Fetch bazaraki through a headless browser and fix its moved URL/markup
Bazaraki now sits behind Cloudflare's JS interstitial (Jsoup gets 403), moved
its phones category to /telephones/mobile-phones/, and redesigned its listing
cards from announcement-container to advert-grid. All three broke the parser.

Add CloudflareBrowserFetcher, a headless Chromium (persistent profile so the
clearance cookie survives, recycled on idle) that runs the challenge and returns
rendered HTML; rewrite BazarakiParser for the new markup, skipping data-t-vip
promoted ads. No Xvfb needed, unlike the AI-Mode browser.

Also fix the otodom canary: the short /mieszkanie/warszawa path now 404s;
Otodom requires the full region path.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>